# FurtherEncapsulationTest

./: .gitignore  .gitpod.yml  CMakeLists.txt  appliance_commanders.cpp  appliance_commanders.hpp  commander_class.hpp  console_remote.hpp  further_encapsulation_test.cpp  random_appliances.cpp  random_appliances.hpp  remote_control.hpp  remote_control_settings.cpp  remote_control_settings.hpp
